--- a/index.html
+++ b/index.html
@@ -4,29 +4,30 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Dz-TDzl4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DciD0Qot.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D6KNQ2xx.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Crg5ZfL9.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.6MXMAjdM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DTvgLHbZ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Bl1Za2hU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CCqWJ8ii.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DSkyk5uH.js">
+		<link rel="modulepreload" href="/kubedex/_app/immutable/entry/start.BZw5jpfO.js">
+		<link rel="modulepreload" href="/kubedex/_app/immutable/chunks/Bwgi_7mJ.js">
+		<link rel="modulepreload" href="/kubedex/_app/immutable/chunks/D6KNQ2xx.js">
+		<link rel="modulepreload" href="/kubedex/_app/immutable/chunks/Crg5ZfL9.js">
+		<link rel="modulepreload" href="/kubedex/_app/immutable/entry/app.D2jyPK4V.js">
+		<link rel="modulepreload" href="/kubedex/_app/immutable/chunks/DTvgLHbZ.js">
+		<link rel="modulepreload" href="/kubedex/_app/immutable/chunks/Bl1Za2hU.js">
+		<link rel="modulepreload" href="/kubedex/_app/immutable/chunks/CCqWJ8ii.js">
+		<link rel="modulepreload" href="/kubedex/_app/immutable/chunks/DSkyk5uH.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_lzwmc7 = {
-						base: ""
+					__sveltekit_d3sddn = {
+						base: "/kubedex",
+						assets: "/kubedex"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Dz-TDzl4.js"),
-						import("/_app/immutable/entry/app.6MXMAjdM.js")
+						import("/kubedex/_app/immutable/entry/start.BZw5jpfO.js"),
+						import("/kubedex/_app/immutable/entry/app.D2jyPK4V.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
